--- a/inbox.html
+++ b/inbox.html
@@ -1121,17 +1121,111 @@
 </div>
   
 
-<div class="d-flex">
+<style>
+  .modal_get_team_update{
 
-  <img src="./assets/images/start.svg" alt="">
 
-<div>
-  <div>
-    StandUp™
+  .modal_content{
+
+  }
+  .modal_content_header h5{
+    font-size: 14px;
+
+  }
+  .dropdown-toggle::after{
+    margin-top: 10px;
+  }
+  .user_drop{
+    display: flex;
+    justify-content: space-between;
+    height: 40px;
+  }
+  .modal_button button{
+    width: 32%;
+    font-size: 12px;
+    
+  }
+
+  .modal_content_one h5{
+    font-size: 16px;
+  } 
+  p{
+    font-size: 14px;
+  } 
+
+
+
+
+}
+</style>
+
+
+
+
+
+
+
+
+
+<div class="modal_get_team_update d-flex  mt-2">
+<div class="modal_img mx-2">
+  <img class="p-2 border border-1 rounded-5" src="./assets/images/start.svg" alt="">
+</div>
+<div class="modal_content border border-1 rounded-4">
+  <div class="modal_content_header border-bottom ">
+   <h5 class="my-3 ms-3">StandUp™</h5>
+
   </div>
-  <div>
+  <div class="p-2 modal_content_one">
     <h5>Automate work updates with AI StandUp™</h5>
     <p>Track daily progress and insights with real-time task updates.</p>
+  </div>
+  <div class="p-2">
+    <p>People or Teams</p>
+    <div class="dropdown open ">
+      <button
+        class="btn dropdown-toggle col-12 user_drop border border-1"
+        type="button"
+        id="triggerId"
+        data-bs-toggle="dropdown"
+        aria-haspopup="true"
+        aria-expanded="false"
+      >
+        <img src="./assets/images/user_profile.svg" alt="">
+      </button>
+      <div class="dropdown-menu" aria-labelledby="triggerId">
+        <button class="dropdown-item" href="#">Action</button>
+        <button class="dropdown-item disabled" href="#">
+          Disabled action
+        </button>
+      </div>
+    </div>
+    <p class="mt-3">Since</p>
+    <div class="dropdown open ">
+      <button
+        class="btn dropdown-toggle col-12 user_drop border border-1"
+        type="button"
+        id="triggerId"
+        data-bs-toggle="dropdown"
+        aria-haspopup="true"
+        aria-expanded="false"
+      >
+       <p>Last 24 hours</p>
+      </button>
+      <div class="dropdown-menu" aria-labelledby="triggerId">
+        <button class="dropdown-item" href="#">Action</button>
+        <button class="dropdown-item disabled" href="#">
+          Disabled action
+        </button>
+      </div>
+    </div>
+    <p class="mt-3">Since</p>
+<div class="modal_button">
+  <button class="btn border border-1 ">Bulleted list</button>
+  <button class="btn border border-1 ">Short</button>
+  <button class="btn border border-1 ">Traditional</button>
+</div>
+<button class="btn col-12 mt-4 action_button">Generate</button>
   </div>
   <div>
     <p></p>
